--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="heading">
             <h1>Home</h1>
             <a href="index.html"><u>Home</u></a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="la.html">Los Echos</a><span>&nbsp;</span>
