--- a/la.html
+++ b/la.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <title>Los Echos Achievements</title>
 </head>
-<body>
+<body style="background-image: url('atlas.webp');">
     <div class="main">
         <div class="heading">
             <h1>Los Echos Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="la.html"><u>Los Echos</u></a><span>&nbsp;</span>
@@ -95,20 +95,8 @@
             </div>
         </div>
         <hr>
-        <div class="achievement">
-            <div class="check">
-                <div id="alert"><input id="alertme" type="checkbox"></input></div>
-            </div>
-            <div class="todo">
-                <p>Launch the Eagle X Rocket</p>
-            </div>
-            <div class="points">
-                <p>+20 Achievement Points</p>
-            </div>
-        </div>
-        <hr>
         <div class="secret">
-            <p>There is 1 <span>Secret Achievement</span> in this Catagory!</p>
+            <p>There are 2 <span>Secret Achievements</span> in this Catagory!</p>
         </div>
     </div>
 </body>
