--- a/none.html
+++ b/none.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <title>Non-Location Based Achievements</title>
 </head>
-<body>
+<body style="background-image: url('none.webp');">
     <div class="main">
         <div class="heading">
             <h1>Non-Location Based Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="la.html">Los Echos</a><span>&nbsp;</span>
@@ -172,7 +172,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Unlock Evvery Subway Platform</p>
+                <p>Unlock Every Subway Platform</p>
             </div>
             <div class="points">
                 <p>+20 Achievement Points</p>
