--- a/olympus.html
+++ b/olympus.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <title>Olympus Achievements</title>
 </head>
-<body>
+<body style="background-image: url('olympus.webp');">
     <div class="main">
         <div class="heading">
             <h1>Olympus Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html"><u>Olympus</u></a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="la.html">Los Echos</a><span>&nbsp;</span>
