--- a/other.html
+++ b/other.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <title>Other Achievements</title>
 </head>
-<body>
+<body style="background-image: url('other.png');">
     <div class="main">
         <div class="heading">
             <h1>Other Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="la.html">Los Echos</a><span>&nbsp;</span>
