--- a/atlas.html
+++ b/atlas.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="main.css">
     <title>Atlas Achievements</title>
 </head>
-<body>
+<body style="background-image: url('atlas.webp');">
     <div class="main">
         <div class="heading">
             <h1>Atlas Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
-            <a href="imperius.html">Imperius</a><span>&nbsp;</span>
+            <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html"><u>Atlas</u></a><span>&nbsp;</span>
             <a href="la.html">Los Echos</a><span>&nbsp;</span>
