--- a/impirius.html
+++ b/impirius.html
@@ -40,7 +40,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Leave Impirius using a Travel Ricket at the East Gate</p>
+                <p>Leave Impirius using a Travel Ticket at the East Gate</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
