--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <meta property=’og:title’ content='OWZA Achievement Tracker'/>
+    <meta property=’og:image’ content='https://imgur.com/a/VjSth4x’ />
+    <meta property=’og:description’ content='Search Achievements By City'/>
+    <meta property=’og:url’ content='https://openworldzombieapocalypse.github.io/Achievements'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
     <title>Home</title>
 </head>
-<body>
+<body style="background-image: url('imperius.webp');">
     <div class="main">
         <div class="heading">
             <h1>Home</h1>
@@ -23,7 +29,18 @@
             <a href="none.html">Non-Location Based</a>
         </div>
         <hr>
-        ill put something here later
+        <div class="download">
+            <p>Sort Achievements By City
+                <br><br>
+                or
+                <br><br>
+                Download An Achievement List:
+            </p>
+            <div class="button">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <a class="btn" href="#"><i class="fa fa-download"></i> Download</a> 
+            </div>
+        </div>
     <div>
 </body>
 </html>
