--- a/atlas.html
+++ b/atlas.html
@@ -18,9 +18,33 @@
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html"><u>Atlas</u></a><span>&nbsp;</span>
-            <a href="la.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find Atlas</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find the Amora Mansion</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
         </div>
         <hr>
         <div class="achievement">
