--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
-            <a href="la.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
         </div>
         <hr>
         <div class="download">
+            <p>
+                <span style="color: #FFAA00; text-shadow: 2px 2px #2A2A00;">Achievements</span> give you new goals to work towards while exploring the map! Every 100 achievement points that you get, you will be given a special item!
+                <br>
+                <br>
+            </p>
             <p>Sort Achievements By City
                 <br><br>
                 or
@@ -39,6 +44,13 @@
             <div class="button">
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <a class="btn" href="#"><i class="fa fa-download"></i> Download</a> 
+            </div>
+            <p><br><br><br><br><br><br><br><br><br>
+                Download The Map:
+            </p>
+            <div class="button">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <a target=”_blank” class="btn" href="https://www.planetminecraft.com/project/open-world-zombie-apocalypse-survival/"><i class="fa fa-download"></i> Download</a> 
             </div>
         </div>
     <div>
