--- a/le.html
+++ b/le.html
@@ -8,17 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Olympus Achievements</title>
+    <title>Los Echos Achievements</title>
 </head>
-<body style="background-image: url('olympus.webp');">
+<body style="background-image: url('atlas.webp');">
     <div class="main">
         <div class="heading">
-            <h1>Olympus Achievements</h1>
+            <h1>Los Echos Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
-            <a href="olympus.html"><u>Olympus</u></a><span>&nbsp;</span>
+            <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
-            <a href="le.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html"><u>Los Echos</u></a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
         </div>
@@ -28,7 +28,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find Olympus</p>
+                <p>Find Los Echos</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -40,7 +40,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Spawn the Ruby Raiders</p>
+                <p>Find the Los Echos City Hall</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -52,7 +52,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Amusement Park</p>
+                <p>Get a Strike on All 3 Bowling Alleys</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -64,7 +64,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Go to the Future in the Amusement Park</p>
+                <p>Get Ready to Hit a Home Run</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -76,7 +76,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Hidden Lab Behind Bookshelves</p>
+                <p>Spawn the Echos Division at the National Guard</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -88,7 +88,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Blow up the Gas Station</p>
+                <p>Spawn the Motel Savages</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -100,7 +100,19 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Hidden Underground House</p>
+                <p>Activate the Reflection Pool Generator</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Walk Through the Tunnel and be on the Wrong Side of the Rubble</p>
             </div>
             <div class="points">
                 <p>+10 Achievement Points</p>
@@ -112,7 +124,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Brew a Custom Potion</p>
+                <p>Find the Oasis</p>
             </div>
             <div class="points">
                 <p>+10 Achievement Points</p>
@@ -124,13 +136,76 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Blow up the Helicopter</p>
+                <p>Active the C3 train</p>
             </div>
             <div class="points">
                 <p>+10 Achievement Points</p>
             </div>
         </div>
         <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Activate Power Station at a Los Echos Subway Station</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Climb to the Top of the Highest Building on the Map</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Plant a Bomb on Vertigo</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Complete the Los Echos Casino Heist</p>
+            </div>
+            <div class="points">
+                <p>+15 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Get through all the Tilkshire Zombies</p>
+            </div>
+            <div class="points">
+                <p>+15 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="secret">
+            <p>There are 4 <span>Secret Achievements</span> in this Catagory!</p>
+        </div>
     </div>
 </body>
 </html>
