--- a/none.html
+++ b/none.html
@@ -18,7 +18,7 @@
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
-            <a href="la.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html"><u>Non-Location Based</u></a>
         </div>
