--- a/other.html
+++ b/other.html
@@ -18,7 +18,7 @@
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
-            <a href="la.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html"><u>Other</u></a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
         </div>
@@ -29,6 +29,30 @@
             </div>
             <div class="todo">
                 <p>Finish the Tutorial</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Make your way to Terraville</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Trigger the Small Mansion Dance Floor Trap</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
@@ -52,10 +76,22 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Ruins</p>
+                <p>Visit Fairhill Park</p>
             </div>
             <div class="points">
-                <p>+10 Achievement Points</p>
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Journey Into the Abandoned Military Base</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -95,8 +131,68 @@
             </div>
         </div>
         <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find the Main Culprits of the Drugs in the Los Echos City/p>
+            </div>
+            <div class="points">
+                <p>+15 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find the Ruins</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Kill Havoc</p>
+            </div>
+            <div class="points">
+                <p>+15 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Activate Every Ruins Buff</p>
+            </div>
+            <div class="points">
+                <p>+25 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Craft Every Ruins Item</p>
+            </div>
+            <div class="points">
+                <p>+25 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
         <div class="secret">
-            <p>There are 4 <span>Secret Achievements</span> in this Catagory!</p>
+            <p>There are 6 <span>Secret Achievements</span> in this Catagory!</p>
         </div>
     </div>
 </body>
