--- a/impirius.html
+++ b/impirius.html
@@ -18,7 +18,7 @@
             <a href="impirius.html"><u>Impirius</u></a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
-            <a href="la.html">Los Echos</a><span>&nbsp;</span>
+            <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
         </div>
@@ -46,6 +46,19 @@
                 <p>+5 Achievement Points</p>
             </div>
         </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find a Con Artist's Store</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
     </div>
 </body>
 </html>
