--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
         <div class="download">
             <p>
-                <span style="color: #FFAA00; text-shadow: 2px 2px #2A2A00;">Achievements</span> give you new goals to work towards while exploring the map! Every 100 achievement points that you get, you will be given a special item!
+                <span style="color: #FFAA00; text-shadow: 2px 2px #2A2A00;">Achievements</span> give you new goals to work towards while exploring the map! Gaining 100, 500, and 100 achievement points will grant a special item!
                 <br>
                 <br>
             </p>
@@ -39,13 +39,13 @@
                 <br><br>
                 or
                 <br><br>
-                Download An Achievement List:
+                Download Achievement List
             </p>
             <div class="button">
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                <a class="btn" href="#"><i class="fa fa-download"></i> Download</a> 
+                <a class="btn" href="OWZA Achievements.xlsx"><i class="fa fa-download"></i> Download .xlsx</a> 
             </div>
-            <p><br><br><br><br><br><br><br><br><br>
+            <p><br><br><br><br><br><br><br><br>
                 Download The Map:
             </p>
             <div class="button">
