--- a/le.html
+++ b/le.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="main.css">
     <title>Los Echos Achievements</title>
 </head>
-<body style="background-image: url('atlas.webp');">
+<body style="background-image: url('le.png');">
     <div class="main">
         <div class="heading">
             <h1>Los Echos Achievements</h1>
