--- a/other.html
+++ b/other.html
@@ -136,7 +136,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Main Culprits of the Drugs in the Los Echos City/p>
+                <p>Find the Main Culprits of the Drugs in the Los Echos City</p>
             </div>
             <div class="points">
                 <p>+15 Achievement Points</p>
