--- a/impirius.html
+++ b/impirius.html
@@ -28,7 +28,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Spawn the Saphire Soldiers</p>
+                <p>Spawn the Saphhire Soldiers</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
