--- a/olympus.html
+++ b/olympus.html
@@ -88,7 +88,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Blow up the Gas Station</p>
+                <p>Discover the Olympus International Airport Terminal</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
