--- a/other.html
+++ b/other.html
@@ -100,6 +100,30 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
+                <p>Find Joel Miller's Farm</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Blow up the Gas Station in Terraville</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
                 <p>Activate 4 Aston Generators</p>
             </div>
             <div class="points">
