--- a/le.html
+++ b/le.html
@@ -88,7 +88,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Spawn the Motel Savages</p>
+                <p>Discover the Motel Savages</p>
             </div>
             <div class="points">
                 <p>+5 Achievement Points</p>
