--- a/atlas.html
+++ b/atlas.html
@@ -21,6 +21,7 @@
             <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
+            <a href="fishing.html">Fishing</a>
         </div>
         <hr>
         <div class="achievement">
