--- a/fishing.html
+++ b/fishing.html
@@ -8,20 +8,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Olympus Achievements</title>
+    <title>Other Achievements</title>
 </head>
-<body style="background-image: url('olympus.webp');">
+<body style="background-image: url('fishing.png');">
     <div class="main">
         <div class="heading">
-            <h1>Olympus Achievements</h1>
+            <h1>Other Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
-            <a href="olympus.html"><u>Olympus</u></a><span>&nbsp;</span>
+            <a href="olympus.html">Olympus</a><span>&nbsp;</span>
             <a href="atlas.html">Atlas</a><span>&nbsp;</span>
             <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
-            <a href="fishing.html">Fishing</a>
+            <a href="fishing.html"><u>Fishing</u></a>
         </div>
         <hr>
         <div class="achievement">
@@ -29,22 +29,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find Olympus</p>
+                <p>Fish up a Legendary Giant Sea Bass</p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can Be Found in Deep Ocean</p>
             </div>
             <div class="points">
-                <p>+5 Achievement Points</p>
-            </div>
-        </div>
-        <hr>
-        <div class="achievement">
-            <div class="check">
-                <div id="alert"><input id="alertme" type="checkbox"></input></div>
-            </div>
-            <div class="todo">
-                <p>Spawn the Ruby Raiders</p>
-            </div>
-            <div class="points">
-                <p>+5 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -53,10 +42,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Amusement Park</p>
+                <p>Fish up a Legendary Eel</p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Deep Lukewarm Ocean</p>
             </div>
             <div class="points">
-                <p>+5 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -65,10 +55,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Go to the Future in the Amusement Park</p>
+                <p>Fish up a Legendary Bluedin Tuna</p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Ocean</p>
             </div>
             <div class="points">
-                <p>+5 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -77,10 +68,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Hidden Lab Behind Bookshelves</p>
+                <p>Fish up a Legendary Angelfish</p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Lukewarm Ocean</p>
             </div>
             <div class="points">
-                <p>+5 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -89,10 +81,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Discover the Olympus International Airport Terminal</p>
+                <p>Fish up a Legendary Darter</p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in River</p>
             </div>
             <div class="points">
-                <p>+5 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
@@ -101,34 +94,11 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Find the Hidden Underground House</p>
+                <p class="sturgeon">Fish up a Legendary <a target="_blank" href="sturgeon.jpg">Sturgeon</a></p>
+                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Swamp</p>
             </div>
             <div class="points">
-                <p>+10 Achievement Points</p>
-            </div>
-        </div>
-        <hr>
-        <div class="achievement">
-            <div class="check">
-                <div id="alert"><input id="alertme" type="checkbox"></input></div>
-            </div>
-            <div class="todo">
-                <p>Brew a Custom Potion</p>
-            </div>
-            <div class="points">
-                <p>+10 Achievement Points</p>
-            </div>
-        </div>
-        <hr>
-        <div class="achievement">
-            <div class="check">
-                <div id="alert"><input id="alertme" type="checkbox"></input></div>
-            </div>
-            <div class="todo">
-                <p>Blow up the Helicopter</p>
-            </div>
-            <div class="points">
-                <p>+10 Achievement Points</p>
+                <p>+25 Achievement Points</p>
             </div>
         </div>
         <hr>
