--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
+            <a href="fishing.html">Fishing</a>
         </div>
         <hr>
         <div class="download">
             <p>
-                <span style="color: #FFAA00; text-shadow: 2px 2px #2A2A00;">Achievements</span> give you new goals to work towards while exploring the map! Gaining 100, 500, and 1,000 achievement points will grant a special item!
+                <span style="color: #FFAA00; text-shadow: 2px 2px #2A2A00;">Achievements</span> give you new goals to work towards while exploring the map! Gaining 100, 500, and 100 achievement points will grant a special item!
                 <br>
                 <br>
             </p>
