--- a/none.html
+++ b/none.html
@@ -21,6 +21,7 @@
             <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html">Other</a><span>&nbsp;</span>
             <a href="none.html"><u>Non-Location Based</u></a>
+            <a href="fishing.html">Fishing</a>
         </div>
         <hr>
         <div class="achievement">
