--- a/other.html
+++ b/other.html
@@ -21,6 +21,7 @@
             <a href="le.html">Los Echos</a><span>&nbsp;</span>
             <a href="other.html"><u>Other</u></a><span>&nbsp;</span>
             <a href="none.html">Non-Location Based</a>
+            <a href="fishing.html">Fishing</a>
         </div>
         <hr>
         <div class="achievement">
@@ -124,6 +125,18 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
+                <p>Find the Emerald Embezzlers</p>
+            </div>
+            <div class="points">
+                <p>+5 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
                 <p>Activate 4 Aston Generators</p>
             </div>
             <div class="points">
@@ -137,6 +150,54 @@
             </div>
             <div class="todo">
                 <p>Buy an Item With Keys</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>You Have Entered Shrunks Swamp... Get Out</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Discover the Oil Rig</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find Arlham Prison</p>
+            </div>
+            <div class="points">
+                <p>+10 Achievement Points</p>
+            </div>
+        </div>
+        <hr>
+        <div class="achievement">
+            <div class="check">
+                <div id="alert"><input id="alertme" type="checkbox"></input></div>
+            </div>
+            <div class="todo">
+                <p>Find the Niyol Mine</p>
             </div>
             <div class="points">
                 <p>+10 Achievement Points</p>
@@ -216,7 +277,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There are 6 <span>Secret Achievements</span> in this Catagory!</p>
+            <p>There are 8 <span>Secret Achievements</span> in this Catagory!</p>
         </div>
     </div>
 </body>
