--- a/fishing.html
+++ b/fishing.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Other Achievements</title>
+    <title>Fishing Achievements</title>
 </head>
 <body style="background-image: url('fishing.png');">
     <div class="main">
         <div class="heading">
-            <h1>Other Achievements</h1>
+            <h1>Fishing Achievements</h1>
             <a href="index.html">Home</a><span>&nbsp;</span>
             <a href="impirius.html">Impirius</a><span>&nbsp;</span>
             <a href="olympus.html">Olympus</a><span>&nbsp;</span>
