--- a/fishing.html
+++ b/fishing.html
@@ -55,7 +55,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Fish up a Legendary Bluedin Tuna</p>
+                <p>Fish up a Legendary Bluefin Tuna</p>
                 <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Ocean</p>
             </div>
             <div class="points">
