--- a/fishing.html
+++ b/fishing.html
@@ -30,7 +30,7 @@
             </div>
             <div class="todo">
                 <p>Fish up a Legendary Giant Sea Bass</p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can Be Found in Deep Ocean</p>
+                <p class="location">-Can Be Found in Deep Ocean</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
@@ -43,7 +43,7 @@
             </div>
             <div class="todo">
                 <p>Fish up a Legendary Eel</p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Deep Lukewarm Ocean</p>
+                <p class="location">-Can be Found in Deep Lukewarm Ocean</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="todo">
                 <p>Fish up a Legendary Bluefin Tuna</p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Ocean</p>
+                <p class="location">-Can be Found in Ocean</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="todo">
                 <p>Fish up a Legendary Angelfish</p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Lukewarm Ocean</p>
+                <p class="location">-Can be Found in Lukewarm Ocean</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
@@ -82,7 +82,7 @@
             </div>
             <div class="todo">
                 <p>Fish up a Legendary Darter</p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in River</p>
+                <p class="location">-Can be Found in River</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="todo">
                 <p class="sturgeon">Fish up a Legendary <a target="_blank" href="sturgeon.jpg">Sturgeon</a></p>
-                <p style="color: #00AAAA; font-size: 14px;">-Can be Found in Swamp</p>
+                <p class="location">-Can be Found in Swamp</p>
             </div>
             <div class="points">
                 <p>+25 Achievement Points</p>
