--- a/fishing.html
+++ b/fishing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="favcon.webp">
+    <link rel="icon" type="image/x-icon" href="favconFish.webp">
     <script src="box.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
