--- a/other.html
+++ b/other.html
@@ -277,7 +277,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There are 8 <span>Secret Achievements</span> in this Catagory!</p>
+            <p>There are 8 <span>Secret Achievements</span> in this Category!</p>
         </div>
     </div>
 </body>
