--- a/none.html
+++ b/none.html
@@ -181,7 +181,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There are 2 <span>Secret Achievements</span> in this Catagory!</p>
+            <p>There are 2 <span>Secret Achievements</span> in this Category!</p>
         </div>
     </div>
 </body>
