--- a/le.html
+++ b/le.html
@@ -205,7 +205,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There are 4 <span>Secret Achievements</span> in this Catagory!</p>
+            <p>There are 4 <span>Secret Achievements</span> in this Category!</p>
         </div>
     </div>
 </body>
