--- a/atlas.html
+++ b/atlas.html
@@ -125,7 +125,7 @@
                 <div id="alert"><input id="alertme" type="checkbox"></input></div>
             </div>
             <div class="todo">
-                <p>Wear  the Beheaded Coach's Head</p>
+                <p>Wear the Beheaded Coach's Head</p>
             </div>
             <div class="points">
                 <p>+15 Achievement Points</p>
@@ -133,7 +133,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There is 1 <span>Secret Achievement</span> in this Catagory!</p>
+            <p>There is 1 <span>Secret Achievement</span> in this Category!</p>
         </div>
     </div>
 </body>
