--- a/atlas.html
+++ b/atlas.html
@@ -133,7 +133,7 @@
         </div>
         <hr>
         <div class="secret">
-            <p>There is 1 <span>Secret Achievement</span> in this Catagory!</p>
+            <p>There is 1 <span>Secret Achievement</span> in this Category!</p>
         </div>
     </div>
 </body>
